--- a/src/app/shared/components/home/home.html
+++ b/src/app/shared/components/home/home.html
@@ -1,17 +1,27 @@
 <section class="relative h-full overflow-hidden">
   <div class="absolute inset-0">
-    <!-- Dikey çizgiler -->
-    <div class="absolute left-20 top-0 h-full border-l border-secondary"></div>
-    <!-- Yatay çizgiler -->
-    <div class="absolute bottom-1/4 left-0 w-full border-t border-secondary"></div>
+    @if (!isMobile){
+      <!--dikey-->
+      <div class="absolute left-20 top-0 h-full border-l border-secondary"></div>
+      <!--yatay-->
+      <div class="absolute bottom-1/4 left-0 w-full border-t border-secondary"></div>
+    }
   </div>
 
-  <!-- Ana içerik -->
-  <div class="relative flex h-full">
-    <!-- Sol taraf - EGEMEN CELIK yazısı -->
-    <div class="absolute bottom-1/4 left-24 transform -translate-y-full">
-      <h1 class="text-8xl font-bold tracking-wider text-secondary mb-2">CELIK</h1>
-      <h1 class="text-8xl font-bold tracking-wider text-secondary">EGEMEN</h1>
+  <div class="flex h-full">
+    <div class="flex-1 relative">
+      <div class="flex flex-col w-full justify-center items-center md:absolute md:bottom-1 md:left-24 md:transform md:-translate-y-full md:items-start">
+        <h1 class="text-8xl font-bold tracking-wider text-secondary mb-2 animate-slide-down-1" [ngClass]="{'animate-slide-down-1': this.egemenVisible}" appAnimateOnView (isVisibleChange)="onTitleVisibilityChange($event)">CELIK</h1>
+        <h1 class="text-8xl font-bold tracking-wider text-secondary animate-slide-down-2" [ngClass]="{'animate-slide-down-2': this.celikVisible}"  appAnimateOnView (isVisibleChange)="onTitleVisibilityChange($event)">EGEMEN</h1>
+      </div>
+    </div>
+
+    <div class="w-[40%] flex items-center justify-center h-full">
+      <img ngSrc="assets/images/main.jpg" alt="Egemen Celik" class="h-full w-full object-cover z-100" height="2400"
+           width="1600">
     </div>
   </div>
+
+
+
 </section>
