--- a/src/app/shared/components/navigation/navigation.html
+++ b/src/app/shared/components/navigation/navigation.html
@@ -1,4 +1,4 @@
-<nav class="p-4 border-b border-secondary" [class.scrolled]="isScrolled" >
+<nav class="absolute top-0 w-full p-4 border-b border-secondary z-120" [class.scrolled]="isScrolled" >
   <div class="flex justify-between items-center text-sm tracking-wider px-4" >
     <a routerLink="/" class="ml-2"> {{this.currentYear}}</a>
     <a routerLink="/" class="ml-2"> creative </a>
