Refactor theme service and navigation components; add content component with initial structure

--- a/src/app/shared/components/home/home.html
+++ b/src/app/shared/components/home/home.html
@@ -1,4 +1,4 @@
-<section class="relative h-full overflow-hidden">
+<section class="relative h-screen overflow-hidden">
   <div class="absolute inset-0">
     @if (!isMobile){
       <!--dikey-->
@@ -22,6 +22,6 @@
     </div>
   </div>
 
-
-
 </section>
+
+<app-content></app-content>
