--- a/src/app/shared/components/content/content.html
+++ b/src/app/shared/components/content/content.html
@@ -1,16 +1,62 @@
 <section class="h-screen bg-secondary text-primary">
   <div class="flex justify-center gap-4 px-10 pt-10 w-full h-full">
-    <div class="w-1/2 flex justify-center">
-      <h1 class="text-5xl text-center">CONTENT</h1>
+    <div class="w-1/2 flex flex-col items-end gap-10">
+      <h1
+        class="text-5xl text-center mt-10"
+        appAnimateOnView
+        (isVisibleChange)="isContentVisibleChange($event)"
+        [ngClass]="{ 'animate-slide-down-1': isContentVisible }"
+      >
+        CONTENT
+      </h1>
+      <img
+        ngSrc="assets/images/content.jpg"
+        alt="content image"
+        class="w-1/2 h-1/3 object-cover"
+        height="800"
+        width="533"
+      />
     </div>
 
-    <div class="flex flex-col justify-center p-4 w-1/2">
-        <ul>
-            <li class="flex justify-between"> <span>01</span> <span>about me</span></li>
-            <li>01 about me</li>
-            <li>01 about me</li>
-            <li>01 about me</li>
-        </ul>
+    <div class="flex flex-col justify-center p-4 w-1/2 text-xl cursor-pointer">
+      <ul appAnimateOnView (isVisibleChange)="isUlVisibleChange($event)">
+        <li
+          class="border-b-2 border-primary p-4 animate-delay-1"
+          [ngClass]="{ 'animate-slide-down': isUlVisible }"
+        >
+          <a class="flex justify-between w-full" href="#about-me"
+            ><span>01</span> <span>about me</span>
+          </a>
+        </li>
+        <li
+          class="border-b-2 border-primary p-4 animate-delay-2"
+          [ngClass]="{ 'animate-slide-down': isUlVisible }"
+        >
+          <a href="#vision" class="flex justify-between"
+            ><span>02</span> <span>vision & mission</span></a
+          >
+        </li>
+        <li
+          class="border-b-2 border-primary p-4 animate-delay-3"
+          [ngClass]="{ 'animate-slide-down': isUlVisible }"
+        >
+          <a href="#work-experience" class="flex justify-between"
+            ><span>03</span> <span>work experience</span></a
+          >
+        </li>
+        <li
+          class="border-b-2 border-primary p-4 animate-delay-4"
+          [ngClass]="{ 'animate-slide-down': isUlVisible }"
+        >
+          <a href="#portfolio-highlights" class="flex justify-between"><span>04</span> <span>portfolio highlights</span></a>
+        </li>
+        <li
+          class="border-b-2 border-primary p-4 animate-delay-5"
+          [ngClass]="{ 'animate-slide-down': isUlVisible }"
+        >
+          <a href="#contact" class="flex justify-between"><span>05</span> <span>contact</span></a>
+        </li>
+      </ul>
     </div>
   </div>
 </section>
