feat: add about-me section

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,10 @@
 
   --text-4xl: 6rem;
   --text-5xl: 7rem;
+  --text-6xl: 8rem;
+  --text-7xl: 9rem;
+  --text-8xl: 10rem;
+  --text-9xl: 11rem;
 }
 
 :root {
