--- a/src/app/shared/components/navigation/navigation.html
+++ b/src/app/shared/components/navigation/navigation.html
@@ -1,6 +1,7 @@
-<nav class="fixed top-0 w-full p-4 border-b z-120 transition-colors duration-300"
+<nav class="fixed top-0 w-full p-4 border-b z-120 "
      [ngClass]="{
-       'bg-secondary text-primary border-primary': isOnContentSection,
+       ' text-primary border-primary': isOnContentSection,
+       ' text-secondary border-secondary': isAboutMeSection,
        'scrolled': isScrolled
      }">
   <div class="flex justify-between items-center text-sm tracking-wider px-4">
