--- a/src/app/shared/components/about-me/about-me.component.html
+++ b/src/app/shared/components/about-me/about-me.component.html
@@ -1,11 +1,16 @@
 <section id="about-me" class="h-screen bg-primary text-secondary">
   <div class="flex items-center h-full relative">
     <div class="w-[10%] h-full flex-1">
-      <img ngSrc="assets/images/about-me.jpg" alt="" class="relative h-full z-100" style="object-fit: cover; object-position: left center;" width="1067" height="1600">
+      <img ngSrc="assets/images/about-me.jpg" alt="" class="relative h-full z-100"
+           style="object-fit: cover; object-position: left center;" width="1067" height="1600">
     </div>
 
     <div class="flex-4 h-full flex items-center justify-center relative">
-      <h2 class="text-9xl text-right font-bold absolute whitespace-nowrap" style="top: 60%; left: 5%; transform: translateY(-50%);">ABOUT ME</h2>
+      <h2 class="text-9xl text-right font-bold absolute whitespace-nowrap"
+          style="top: 50%; left: 5%; transform: translateY(-50%);">ABOUT ME</h2>
+      <p class="absolute p-8 text-sm" style="top: 60%">Hi, I’m Rachelle Beaudry, a passionate photographer dedicated to capturing life’s most genuine moments.
+        I specialize in lifestyle photography, blending creativity and storytelling to create images that resonate.
+        Every shot I take is a reflection of my commitment to authenticity, artistry, and emotion.</p>
     </div>
 
     <div class="h-full flex-4">
