--- a/src/app/shared/components/vision-mission/vision-mission.component.html
+++ b/src/app/shared/components/vision-mission/vision-mission.component.html
@@ -18,11 +18,11 @@
     <div class=" flex gap-10 justify-center
       ">
       <div class="w-1/3">img</div>
-      <div class="border-b w-2/3 flex flex-col justify-end pb-5 mb-2">
-        <h1 class="text-8xl uppercase" appAnimateOnView (isVisibleChange)="onMissionVisibleChange($event)"
-            [ngClass]="{
+      <div class="border-b w-2/3 flex flex-col justify-end pb-5 mb-2" [ngClass]="{
       'animate-slide-down-2':isMissionVisible
       }">
+        <h1 class="text-8xl uppercase" appAnimateOnView (isVisibleChange)="onMissionVisibleChange($event)"
+        >
           MISSION</h1>
         <ul [ngClass]="{
       'animate-slide-down-2':isMissionVisible
