feat: add work-experience section

--- a/src/app/shared/components/home/home.html
+++ b/src/app/shared/components/home/home.html
@@ -27,3 +27,4 @@
 <app-content></app-content>
 <app-about-me></app-about-me>
 <app-vision-mission></app-vision-mission>
+<app-work-experience></app-work-experience>
