feat: add portfolio-highlights component

--- a/src/app/shared/components/home/home.html
+++ b/src/app/shared/components/home/home.html
@@ -28,3 +28,4 @@
 <app-about-me></app-about-me>
 <app-vision-mission></app-vision-mission>
 <app-work-experience></app-work-experience>
+<app-portfolio-highlights></app-portfolio-highlights>
