--- a/src/app/shared/components/vision-mission/vision-mission.component.html
+++ b/src/app/shared/components/vision-mission/vision-mission.component.html
@@ -4,7 +4,7 @@
       <h1 class="text-8xl uppercase w-1/3" appAnimateOnView (isVisibleChange)="onVisionVisibleChange($event)"
           [ngClass]="{
       'animate-slide-down-1':isVisionVisible
-      }">
+      }" [animateOnce]="true">
         VISION</h1>
       <div class="border-b flex flex-col w-2/3 justify-end pb-5 mb-2" appAnimateOnView
            [ngClass]="{
@@ -21,7 +21,7 @@
       <div class="border-b w-2/3 flex flex-col justify-end pb-5 mb-2" [ngClass]="{
       'animate-slide-down-2':isMissionVisible
       }">
-        <h1 class="text-8xl uppercase" appAnimateOnView (isVisibleChange)="onMissionVisibleChange($event)"
+        <h1 class="text-8xl uppercase" appAnimateOnView [animateOnce]="true" (isVisibleChange)="onMissionVisibleChange($event)"
         >
           MISSION</h1>
         <ul [ngClass]="{
