--- a/src/styles.css
+++ b/src/styles.css
@@ -108,3 +108,19 @@ ul, li,  p {
 .animate-delay-6 {
   animation-delay: 0.6s;
 }
+
+.animate-delay-7 {
+  animation-delay: 0.7s;
+}
+
+.animate-delay-8 {
+  animation-delay: 0.8s;
+}
+
+.animate-delay-9 {
+  animation-delay: 0.9s;
+}
+
+.animate-delay-10 {
+  animation-delay: 1.0s;
+}
