--- a/src/app/shared/components/home/home.html
+++ b/src/app/shared/components/home/home.html
@@ -29,3 +29,6 @@
 <app-vision-mission></app-vision-mission>
 <app-work-experience></app-work-experience>
 <app-portfolio-highlights></app-portfolio-highlights>
+<app-projects></app-projects>
+<app-skills></app-skills>
+<app-contact></app-contact>
