--- a/src/app/shared/components/work-experience/work-experience.component.html
+++ b/src/app/shared/components/work-experience/work-experience.component.html
@@ -44,7 +44,7 @@
         <div class="absolute transform -translate-x-1/2 -top-2 w-4 h-4 bg-primary rounded-full"></div>
 
         <div class="ml-8">
-          <h3 class="text-primary font-bold text-xl tracking-wider" appAnimateOnView
+          <h3 class="text-primary font-bold text-xl tracking-wider animate-delay-1" appAnimateOnView
               (isVisibleChange)="onExperienceHeaderVisibleChange($event)"
               [ngClass]="{'animate-slide-down-1':isExperienceHeaderVisible}">SOFTWARE ENGINEER</h3>
           <p class="text-primary italic" [ngClass]="{'animate-slide-down-1':isExperienceHeaderVisible}">March 2024 –
