feat: update all components for proper navigation

--- a/src/app/shared/components/contact/contact.component.html
+++ b/src/app/shared/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="h-screen bg-primary text-secondary">
+<section id="contact" class="h-screen bg-primary text-secondary">
   <div class="flex h-full">
     <div class="w-1/2">
       <img ngSrc="assets/images/contact.jpg" class="h-full object-cover cursor-pointer" alt="Contact Image"
