--- a/src/app/shared/components/content/content.html
+++ b/src/app/shared/components/content/content.html
@@ -54,7 +54,13 @@
           class="border-b-2 border-primary p-4 animate-delay-5"
           [ngClass]="{ 'animate-slide-down': isUlVisible }"
         >
-          <a href="#contact" class="flex justify-between"><span>05</span> <span>contact</span></a>
+          <a href="#skills" class="flex justify-between"><span>05</span> <span>skills</span></a>
+        </li>
+        <li
+          class="border-b-2 border-primary p-4 animate-delay-6"
+          [ngClass]="{ 'animate-slide-down': isUlVisible }"
+        >
+          <a href="#contact" class="flex justify-between"><span>06</span> <span>contact</span></a>
         </li>
       </ul>
     </div>
