--- a/src/app/shared/components/navigation/navigation.html
+++ b/src/app/shared/components/navigation/navigation.html
@@ -6,8 +6,8 @@
      }">
   <div class="flex justify-between items-center text-sm tracking-wider px-4">
     <a routerLink="/" class="ml-2"> {{this.currentYear}}</a>
-    <a routerLink="/" class="ml-2"> creative </a>
+    <a routerLink="/" class="ml-2"> personal </a>
     <a routerLink="/" class="ml-2"> portfolio</a>
-    <a routerLink="/" class="ml-2"> photography </a>
+    <a routerLink="/" class="ml-2"> programming </a>
   </div>
 </nav>
