--- a/src/app/shared/components/skills/skills.component.html
+++ b/src/app/shared/components/skills/skills.component.html
@@ -1,4 +1,4 @@
-<section class="h-screen bg-secondary text-primary">
+<section id="skills" class="h-screen bg-secondary text-primary">
   <div class="flex gap-3 h-full p-10">
     <!--    LEFT-->
     <div class="flex flex-col justify-between items-center gap-3 h-full w-1/2 p-4">
