--- a/src/app/shared/components/vision-mission/vision-mission.component.html
+++ b/src/app/shared/components/vision-mission/vision-mission.component.html
@@ -1,4 +1,4 @@
-<section class="h-screen bg-primary text-secondary pt-20">
+<section id="vision" class="h-screen bg-primary text-secondary pt-20">
   <div class="flex flex-col justify-around h-full px-20">
     <div class="flex gap-10">
       <h1 class="text-8xl uppercase w-1/3" appAnimateOnView (isVisibleChange)="onVisionVisibleChange($event)"
@@ -17,7 +17,7 @@
     </div>
     <div class=" flex gap-10 justify-center
       ">
-      <div class="w-1/3">img</div>
+      <div class="w-1/3"></div>
       <div class="border-b w-2/3 flex flex-col justify-end pb-5 mb-2" [ngClass]="{
       'animate-slide-down-2':isMissionVisible
       }">
