--- a/src/app/shared/components/portfolio-highlights/portfolio-highlights.component.html
+++ b/src/app/shared/components/portfolio-highlights/portfolio-highlights.component.html
@@ -1,4 +1,4 @@
-<section class="h-screen bg-primary text-secondary">
+<section id="portfolio-highlights" class="h-screen bg-primary text-secondary">
   <div class="flex h-full justify-center">
     <div class="flex flex-col w-1/2 max-h-screen">
       <div class="flex h-1/2">
