--- a/src/app/shared/components/work-experience/work-experience.component.html
+++ b/src/app/shared/components/work-experience/work-experience.component.html
@@ -1,4 +1,4 @@
-<section class="h-screen bg-secondary text-primary">
+<section id='work-experience' class="h-screen bg-secondary text-primary">
 
   <div class="flex flex-col justify-around h-full gap-5 p-5">
     <div class="flex gap-5">
