--- a/src/app/shared/components/projects/projects.component.html
+++ b/src/app/shared/components/projects/projects.component.html
@@ -1,16 +1,53 @@
 <section class="h-screen bg-primary text-secondary">
-  <div class="flex gap-3 h-full p-3">
-    <div class="h-full">
-      <img ngSrc="assets/images/main.jpg" class="h-full object-cover cursor-pointer" alt="Portfolio Image 2" width="1600" height="2400">
-    </div>
-    <div class="flex flex-col gap-3">
-      <img ngSrc="assets/images/main.jpg" class="h-full object-cover cursor-pointer" alt="Portfolio Image 2" width="1600" height="2400">
-      <img ngSrc="assets/images/main.jpg" class="h-full object-cover cursor-pointer" alt="Portfolio Image 2" width="1600" height="2400">
-      <img ngSrc="assets/images/main.jpg" class="h-full object-cover cursor-pointer" alt="Portfolio Image 2" width="1600" height="2400">
-    </div>
-    <div class="flex flex-col gap-3">
-      <img ngSrc="assets/images/main.jpg" class="h-full object-cover cursor-pointer" alt="Portfolio Image 2" width="1600" height="2400">
-      <img ngSrc="assets/images/main.jpg" class="h-full object-cover cursor-pointer" alt="Portfolio Image 2" width="1600" height="2400">
-    </div>
+  <div class="h-full grid grid-cols-3 grid-rows-6 gap-4 py-4">
+
+    <img
+      ngSrc="assets/images/main.jpg"
+      class="h-full w-full row-span-6 object-cover cursor-pointer"
+      alt="Portfolio Image 1"
+      width="1600"
+      height="2400"
+    >
+
+    <img
+      ngSrc="assets/images/main.jpg"
+      class="h-full w-full row-span-2 object-cover cursor-pointer"
+      alt="Portfolio Image 2"
+      width="1600"
+      height="2400"
+    >
+
+    <img
+      ngSrc="assets/images/main.jpg"
+      class="h-full w-full row-span-3 object-cover cursor-pointer"
+      alt="Portfolio Image 3"
+      width="1600"
+      height="2400"
+    >
+
+    <img
+      ngSrc="assets/images/main.jpg"
+      class="h-full w-full row-span-2 object-cover cursor-pointer"
+      alt="Portfolio Image 4"
+      width="1600"
+      height="2400"
+    >
+
+    <img
+      ngSrc="assets/images/main.jpg"
+      class="h-full w-full row-span-3 object-cover cursor-pointer"
+      alt="Portfolio Image 5"
+      width="1600"
+      height="2400"
+    >
+
+    <img
+      ngSrc="assets/images/main.jpg"
+      class="h-full w-full row-span-2 object-cover cursor-pointer"
+      alt="Portfolio Image 6"
+      width="1600"
+      height="2400"
+    >
+
   </div>
 </section>
