--- a/src/app/shared/components/home/home.html
+++ b/src/app/shared/components/home/home.html
@@ -8,16 +8,16 @@
     }
   </div>
 
-  <div class="flex h-full">
+  <div class="flex flex-col-reverse gap-8 pt-16 md:pt-0 md:flex-row h-full">
     <div class="flex-1 relative">
-      <div class="flex flex-col w-full text-5xl justify-center items-center md:absolute md:bottom-1 md:left-24 md:transform md:-translate-y-full md:items-start">
+      <div class="flex flex-col w-full text-3xl md:text-5xl justify-center items-center md:absolute md:bottom-1 md:left-24 md:transform md:-translate-y-full md:items-start">
         <h1 class="font-bold tracking-wider text-secondary mb-2 animate-slide-down-1" [ngClass]="{'animate-slide-down-1': this.egemenVisible}" appAnimateOnView [animateOnce]="true" (isVisibleChange)="onTitleVisibilityChange($event)">CELIK</h1>
         <h1 class="font-bold tracking-wider text-secondary animate-slide-down-2" [ngClass]="{'animate-slide-down-2': this.celikVisible}"  appAnimateOnView [animateOnce]="true" (isVisibleChange)="onTitleVisibilityChange($event)">EGEMEN</h1>
       </div>
     </div>
 
-    <div class="w-[40%] flex items-center justify-center h-full">
-      <img ngSrc="assets/images/main.jpg" alt="Egemen Celik" class="h-full w-full object-cover z-100" height="2400"
+    <div class="w-3/4 h-1/2 mx-auto md:w-[40%] z-20 md:h-full">
+      <img ngSrc="assets/images/main.jpg" alt="Egemen Celik" class="h-full w-full object-cover z-100 rounded-md md:rounded-none" height="2400"
            width="1600">
     </div>
   </div>
