--- a/src/app/shared/components/content/content.html
+++ b/src/app/shared/components/content/content.html
@@ -1,8 +1,8 @@
 <section class="h-screen bg-secondary text-primary">
-  <div class="flex justify-center gap-4 px-10 pt-10 w-full h-full">
-    <div class="w-1/2 flex flex-col items-end gap-10">
+  <div class="flex flex-col max-md:items-center md:flex-row justify-center gap-4 px-10 pt-10 w-full h-full">
+    <div class="md:w-1/2 flex flex-col items-end gap-10">
       <h1
-        class="text-5xl text-center mt-10"
+        class="text-3xl md:text-5xl text-center mt-10"
         appAnimateOnView
         (isVisibleChange)="isContentVisibleChange($event)"
         [ngClass]="{ 'animate-slide-down-1': isContentVisible }"
@@ -12,13 +12,13 @@
       <img
         ngSrc="assets/images/content.jpg"
         alt="content image"
-        class="w-1/2 h-1/3 object-cover"
+        class="hidden md:block w-1/2 h-1/3 object-cover"
         height="800"
         width="533"
       />
     </div>
 
-    <div class="flex flex-col justify-center p-4 w-1/2 text-xl cursor-pointer">
+    <div class="flex flex-col justify-center p-4 w-full sm:w-3/4 md:w-1/2 text-lg md:text-xl cursor-pointer">
       <ul appAnimateOnView (isVisibleChange)="isUlVisibleChange($event)">
         <li
           class="border-b-2 border-primary p-4 animate-delay-1"
