--- a/src/app/shared/components/about-me/about-me.component.html
+++ b/src/app/shared/components/about-me/about-me.component.html
@@ -1,18 +1,18 @@
 <section id="about-me" class="h-screen bg-primary text-secondary">
-  <div class="flex items-center h-full relative">
-    <div class="w-[10%] h-full flex-1">
+  <div class="flex flex-col sm:flex-row items-center h-full relative">
+    <div class="w-[10%] h-full flex-1 hidden md:flex">
       <img ngSrc="assets/images/about-me.jpg" alt="" class="relative h-full z-100"
            style="object-fit: cover; object-position: left center;" width="1067" height="1600">
     </div>
 
-    <div class="flex-4 h-full flex items-center justify-center relative">
-      <h2 class="text-9xl text-right font-bold absolute whitespace-nowrap"
-          style="top: 40%; left: 5%; transform: translateY(-50%);" appAnimateOnView (isVisibleChange)="onAboutMeVisibleChange($event)"
+    <div class="sm:flex-4 h-full flex flex-col sm:flex-row max-sm:gap-4 items-center justify-center sm:justify-center relative">
+      <h2 class="text-5xl sm:text-7xl md:text-9xl text-right font-bold sm:absolute whitespace-nowrap sm:top-[40%] sm:left-[5%]"
+          style="transform: translateY(-50%);" appAnimateOnView (isVisibleChange)="onAboutMeVisibleChange($event)"
       [ngClass]="{
       'animate-slide-down-1': isAboutMeVisible
       }"
       >ABOUT ME</h2>
-      <p class="absolute p-8 text-sm" style="top: 60%" appAnimateOnView (isVisibleChange)="onAboutMeParagraphVisibleChange($event)"
+      <p class="sm:absolute p-4 text-justify sm:p-8 text-sm sm:top-[60%]" appAnimateOnView (isVisibleChange)="onAboutMeParagraphVisibleChange($event)"
          [ngClass]="{
       'animate-slide-down-2': isAboutMeParagraphVisible
       }"
@@ -21,7 +21,7 @@
         Every shot I take is a reflection of my commitment to authenticity, artistry, and emotion.</p>
     </div>
 
-    <div class="h-full flex-4">
+    <div class="h-1/2 sm:h-full flex-4">
       <img ngSrc="assets/images/about-me.jpg" alt="" class="h-full object-cover" width="1067" height="1600">
     </div>
   </div>
