--- a/src/app/shared/components/vision-mission/vision-mission.component.html
+++ b/src/app/shared/components/vision-mission/vision-mission.component.html
@@ -1,12 +1,13 @@
 <section id="vision" class="h-screen bg-primary text-secondary pt-20">
-  <div class="flex flex-col justify-around h-full px-20">
-    <div class="flex gap-10">
-      <h1 class="text-8xl uppercase w-1/3" appAnimateOnView (isVisibleChange)="onVisionVisibleChange($event)"
+  <div class="flex flex-col justify-center items-center md:justify-around h-full px-5 md:px-20 gap-5">
+    <div class="flex flex-col xl:flex-row md:gap-10 w-full sm:max-md:w-3/4 ">
+      <h1 class="text-4xl sm:text-6xl text-center md:text-end md:text-8xl uppercase w-full md:w-1/3" appAnimateOnView
+          (isVisibleChange)="onVisionVisibleChange($event)"
           [ngClass]="{
       'animate-slide-down-1':isVisionVisible
       }" [animateOnce]="true">
         VISION</h1>
-      <div class="border-b flex flex-col w-2/3 justify-end pb-5 mb-2" appAnimateOnView
+      <div class="border-b flex flex-col md:w-2/3 justify-end pb-5 mb-2 text-justify" appAnimateOnView
            [ngClass]="{
       'animate-slide-down-1':isVisionVisible
       }
@@ -15,21 +16,22 @@
           and preserve memories for generations.</p>
       </div>
     </div>
-    <div class=" flex gap-10 justify-center
-      ">
-      <div class="w-1/3"></div>
-      <div class="border-b w-2/3 flex flex-col justify-end pb-5 mb-2" [ngClass]="{
+    <div class="flex justify-center items-center md:justify-end w-full sm:max-md:w-3/4">
+      <div class="border-b flex flex-col md:justify-end pb-5 mb-2" [ngClass]="{
       'animate-slide-down-2':isMissionVisible
       }">
-        <h1 class="text-8xl uppercase" appAnimateOnView [animateOnce]="true" (isVisibleChange)="onMissionVisibleChange($event)"
+        <h1 class="text-4xl sm:text-6xl text-end md:text-8xl uppercase max-md:text-center" appAnimateOnView [animateOnce]="true"
+            (isVisibleChange)="onMissionVisibleChange($event)"
         >
           MISSION</h1>
         <ul [ngClass]="{
       'animate-slide-down-2':isMissionVisible
       }">
-          <li>To provide exceptional photography services that blend creativity, emotion, and authenticity.</li>
-          <li>To collaborate with clients to bring their vision to life</li>
-          <li>Creating meaningful and impactful visuals.</li>
+          <li class="text-justify">To provide exceptional photography services that blend creativity, emotion, and
+            authenticity.
+          </li>
+          <li class="text-justify">To collaborate with clients to bring their vision to life</li>
+          <li class="text-justify">Creating meaningful and impactful visuals.</li>
         </ul>
       </div>
     </div>
