--- a/src/app/shared/components/content/content.html
+++ b/src/app/shared/components/content/content.html
@@ -1,8 +1,8 @@
-<section class="h-screen bg-secondary text-primary">
+<section class="min-h-screen bg-secondary text-primary">
   <div class="flex flex-col max-md:items-center md:flex-row justify-center gap-4 px-10 pt-10 w-full h-full">
     <div class="md:w-1/2 flex flex-col items-end gap-10">
       <h1
-        class="text-3xl md:text-5xl text-center mt-10"
+        class="text-4xl md:text-5xl text-center mt-10"
         appAnimateOnView
         (isVisibleChange)="isContentVisibleChange($event)"
         [ngClass]="{ 'animate-slide-down-1': isContentVisible }"
