--- a/src/app/shared/components/vision-mission/vision-mission.component.html
+++ b/src/app/shared/components/vision-mission/vision-mission.component.html
@@ -1,7 +1,7 @@
-<section id="vision" class="h-screen bg-primary text-secondary pt-20">
+<section id="vision" class="min-h-screen bg-primary text-secondary pt-20">
   <div class="flex flex-col justify-center items-center md:justify-around h-full px-5 md:px-20 gap-5">
     <div class="flex flex-col xl:flex-row md:gap-10 w-full sm:max-md:w-3/4 ">
-      <h1 class="text-4xl sm:text-6xl text-center md:text-end md:text-8xl uppercase w-full md:w-1/3" appAnimateOnView
+      <h1 class="text-4xl sm:text-5xl text-center md:text-end md:text-8xl uppercase w-full md:w-1/3" appAnimateOnView
           (isVisibleChange)="onVisionVisibleChange($event)"
           [ngClass]="{
       'animate-slide-down-1':isVisionVisible
@@ -12,7 +12,7 @@
       'animate-slide-down-1':isVisionVisible
       }
       ">
-        <p>To capture the essence of life’s moments, turning them into timeless visual stories that inspire, connect,
+        <p class="max-md:text-sm">To capture the essence of life’s moments, turning them into timeless visual stories that inspire, connect,
           and preserve memories for generations.</p>
       </div>
     </div>
@@ -20,11 +20,11 @@
       <div class="border-b flex flex-col md:justify-end pb-5 mb-2" [ngClass]="{
       'animate-slide-down-2':isMissionVisible
       }">
-        <h1 class="text-4xl sm:text-6xl text-end md:text-8xl uppercase max-md:text-center" appAnimateOnView [animateOnce]="true"
+        <h1 class="text-4xl sm:text-5xl text-end md:text-8xl uppercase max-md:text-center" appAnimateOnView [animateOnce]="true"
             (isVisibleChange)="onMissionVisibleChange($event)"
         >
           MISSION</h1>
-        <ul [ngClass]="{
+        <ul class="max-md:text-sm" [ngClass]="{
       'animate-slide-down-2':isMissionVisible
       }">
           <li class="text-justify">To provide exceptional photography services that blend creativity, emotion, and
