--- a/src/app/shared/components/projects/projects.component.html
+++ b/src/app/shared/components/projects/projects.component.html
@@ -1,9 +1,12 @@
-<section class="h-screen bg-primary text-secondary">
-  <div class="h-full grid grid-cols-3 grid-rows-6 gap-4 py-4">
-
+<section class="min-h-screen md:h-screen bg-primary text-secondary">
+  <div
+    class="h-full grid gap-4 py-4
+           grid-cols-1 sm:grid-cols-2 md:grid-cols-3
+           grid-rows-auto md:grid-rows-6"
+  >
     <img
       ngSrc="assets/images/main.jpg"
-      class="h-full w-full row-span-6 object-cover cursor-pointer"
+      class="w-full h-64 sm:h-80 md:h-full row-span-6 object-cover cursor-pointer"
       alt="Portfolio Image 1"
       width="1600"
       height="2400"
@@ -11,7 +14,7 @@
 
     <img
       ngSrc="assets/images/main.jpg"
-      class="h-full w-full row-span-2 object-cover cursor-pointer"
+      class="w-full h-64 sm:h-80 md:h-full row-span-2 object-cover cursor-pointer"
       alt="Portfolio Image 2"
       width="1600"
       height="2400"
@@ -19,7 +22,7 @@
 
     <img
       ngSrc="assets/images/main.jpg"
-      class="h-full w-full row-span-3 object-cover cursor-pointer"
+      class="w-full h-64 sm:h-80 md:h-full row-span-3 object-cover cursor-pointer"
       alt="Portfolio Image 3"
       width="1600"
       height="2400"
@@ -27,7 +30,7 @@
 
     <img
       ngSrc="assets/images/main.jpg"
-      class="h-full w-full row-span-2 object-cover cursor-pointer"
+      class="w-full h-64 sm:h-80 md:h-full row-span-2 object-cover cursor-pointer"
       alt="Portfolio Image 4"
       width="1600"
       height="2400"
@@ -35,7 +38,7 @@
 
     <img
       ngSrc="assets/images/main.jpg"
-      class="h-full w-full row-span-3 object-cover cursor-pointer"
+      class="w-full h-64 sm:h-80 md:h-full row-span-3 object-cover cursor-pointer"
       alt="Portfolio Image 5"
       width="1600"
       height="2400"
@@ -43,11 +46,10 @@
 
     <img
       ngSrc="assets/images/main.jpg"
-      class="h-full w-full row-span-2 object-cover cursor-pointer"
+      class="w-full h-64 sm:h-80 md:h-full row-span-2 object-cover cursor-pointer"
       alt="Portfolio Image 6"
       width="1600"
       height="2400"
     >
-
   </div>
 </section>
