--- a/src/app/shared/components/work-experience/work-experience.component.html
+++ b/src/app/shared/components/work-experience/work-experience.component.html
@@ -1,6 +1,6 @@
 <section id='work-experience' class="md:min-h-screen bg-secondary text-primary">
 
-  <div class="flex max-md:flex-col-reverse flex-col justify-around h-full gap-6 md:gap-10 p-5 pt-20">
+  <div class="flex max-md:flex-col-reverse flex-col justify-around min-h-screen gap-6 md:gap-10 p-5 pt-20">
     <div class="flex max-md:flex-col flex-wrap max-md:gap-8">
       <div class="relative flex items-start basis-1/2 px-8">
 
@@ -91,7 +91,7 @@
       </div>
     </div>
 
-    <h2 class="text-3xl md:text-7xl" appAnimateOnView [animateOnce]="true" (isVisibleChange)="onWorkExperienceVisibleChange($event)"
+    <h2 class="text-4xl md:text-9xl" appAnimateOnView [animateOnce]="true" (isVisibleChange)="onWorkExperienceVisibleChange($event)"
         [ngClass]="{'animate-slide-down-1':isWorkExperienceVisible}">WORK EXPERIENCE</h2>
   </div>
 </section>
