--- a/src/app/shared/components/vision-mission/vision-mission.component.html
+++ b/src/app/shared/components/vision-mission/vision-mission.component.html
@@ -1,7 +1,7 @@
-<section id="vision" class="min-h-screen bg-primary text-secondary pt-20">
-  <div class="flex flex-col justify-center items-center md:justify-around h-full px-5 md:px-20 gap-5">
-    <div class="flex flex-col xl:flex-row md:gap-10 w-full sm:max-md:w-3/4 ">
-      <h1 class="text-4xl sm:text-5xl text-center md:text-end md:text-8xl uppercase w-full md:w-1/3" appAnimateOnView
+<section id="vision" class="min-h-screen bg-primary text-secondary">
+  <div class="flex flex-col items-center justify-around px-5 md:px-20 h-screen gap-5">
+    <div class="flex flex-col xl:flex-row gap-5 md:gap-10 w-full sm:max-md:w-3/4 ">
+      <h1 class="text-4xl sm:text-7xl text-center md:text-end md:text-10xl uppercase w-full md:w-1/3" appAnimateOnView
           (isVisibleChange)="onVisionVisibleChange($event)"
           [ngClass]="{
       'animate-slide-down-1':isVisionVisible
@@ -17,10 +17,10 @@
       </div>
     </div>
     <div class="flex justify-center items-center md:justify-end w-full sm:max-md:w-3/4">
-      <div class="border-b flex flex-col md:justify-end pb-5 mb-2" [ngClass]="{
+      <div class="border-b flex flex-col md:justify-end pb-5 mb-2 gap-5" [ngClass]="{
       'animate-slide-down-2':isMissionVisible
       }">
-        <h1 class="text-4xl sm:text-5xl text-end md:text-8xl uppercase max-md:text-center" appAnimateOnView [animateOnce]="true"
+        <h1 class="text-4xl sm:text-7xl text-end md:text-10xl uppercase max-md:text-center" appAnimateOnView [animateOnce]="true"
             (isVisibleChange)="onMissionVisibleChange($event)"
         >
           MISSION</h1>
