--- a/src/styles.css
+++ b/src/styles.css
@@ -6,14 +6,29 @@
   --color-tertiary: #F5F5F5;
   --color-accent: #FF6F61;
 
+/* text-10xl */
+  --text-10xl: 12rem;
+  --text-10xl--line-height: 1; 
 
-  --text-3xl: 4rem;
-  --text-4xl: 5.25rem;
-  --text-5xl: 6.75rem;
-  --text-6xl: 8rem;
-  --text-7xl: 9rem;
-  --text-8xl: 10rem;
-  --text-9xl: 11rem;
+  /* text-11xl */
+  --text-11xl: 14rem;
+  --text-11xl--line-height: 1;
+
+  /* text-12xl */
+  --text-12xl: 16rem;
+  --text-12xl--line-height: 1;
+  
+  /* text-13xl (NEW) */
+  --text-13xl: 18rem;
+  --text-13xl--line-height: 1;
+  
+  /* text-14xl (NEW) */
+  --text-14xl: 19rem;
+  --text-14xl--line-height: 1;
+
+  /* text-15xl */
+  --text-15xl: 20rem;
+  --text-15xl--line-height: 1;
 }
 
 :root {
