refactor: change of images

--- a/src/app/shared/components/about-me/about-me.component.html
+++ b/src/app/shared/components/about-me/about-me.component.html
@@ -1,8 +1,7 @@
 <section id="about-me" class="h-screen bg-primary text-secondary">
   <div class="flex flex-col sm:flex-row items-center h-full relative">
     <div class="w-[10%] h-full flex-1 hidden md:flex">
-      <img ngSrc="assets/images/about-me.jpg" alt="" class="relative h-full z-100"
-           style="object-fit: cover; object-position: left center;" width="1067" height="1600">
+      <img ngSrc="assets/images/kapadokya.jpeg" alt="" class="h-full object-cover object-right" width="2000" height="1500">
     </div>
 
     <div class="sm:flex-4 h-full flex flex-col sm:flex-row max-sm:gap-4 items-center justify-center sm:justify-center relative">
@@ -22,7 +21,7 @@
     </div>
 
     <div class="h-1/2 sm:h-full flex-4">
-      <img ngSrc="assets/images/about-me.jpg" alt="" class="h-full object-cover" width="1067" height="1600">
+      <img ngSrc="assets/images/kapadokya.jpeg" alt="" class="h-full object-cover" width="2000" height="1500">
     </div>
   </div>
 </section>
