--- a/src/app/shared/components/home/home.html
+++ b/src/app/shared/components/home/home.html
@@ -44,11 +44,11 @@
 
     <div class="w-3/4 h-1/2 mx-auto md:w-[40%] z-20 md:h-full">
       <img
-        ngSrc="assets/images/main.jpg"
+        ngSrc="assets/images/prag.jpeg"
         alt="Egemen Celik"
         class="h-full w-full object-cover z-100 rounded-md md:rounded-none"
-        height="2400"
-        width="1600"
+        height="2016"
+        width="1134"
       />
     </div>
   </div>
