--- a/src/app/shared/components/portfolio-highlights/portfolio-highlights.component.html
+++ b/src/app/shared/components/portfolio-highlights/portfolio-highlights.component.html
@@ -3,21 +3,21 @@
     <div class="flex flex-col md:w-1/2 max-h-screen h-full">
       <div class="flex h-1/2">
         <div class="md:w-1/2 h-full">
-          <img ngSrc="assets/images/main.jpg" class="h-full object-cover" alt="Portfolio Image 1" width="1600" height="2400">
+          <img ngSrc="assets/images/cluj.jpeg" class="h-full object-cover" alt="Portfolio Image 1" width="1600" height="2400">
         </div>
         <div class="md:w-1/2 h-full">
-          <img ngSrc="assets/images/main.jpg" class="h-full object-cover" alt="Portfolio Image 2" width="1600" height="2400">
+          <img ngSrc="assets/images/port-new.jpeg" class="h-full object-cover" alt="Portfolio Image 2" width="1600" height="2400">
         </div>
       </div>
       <div class="md:h-1/2 z-20 p-10" appAnimateOnView [animateOnce]="true" (isVisibleChange)="onPortfolioHighlightsChange($event)">
-        <h1 class="text-4xl md:text-4xl"
+        <h1 class="text-4xl md:text-8xl"
         [ngClass]="{'animate-slide-down-1': isPortfolioHighlights}"
         >PORTFOLIO </h1>
-        <h1 class="text-4xl sm:text-5xl md:text-9xl" [ngClass]="{'animate-slide-down-2': isPortfolioHighlights}">HIGHLIGHTS</h1>
+        <h1 class="text-4xl sm:text-5xl md:text-10xl" [ngClass]="{'animate-slide-down-2': isPortfolioHighlights}">HIGHLIGHTS</h1>
       </div>
     </div>
     <div class="w-full md:w-1/2">
-      <img ngSrc="assets/images/main.jpg" class="object-cover h-full" alt="Portfolio Image 3" width="1600" height="2400">
+      <img ngSrc="assets/images/krakow.jpeg" class="object-cover h-full" alt="Portfolio Image 3" width="1512" height="2016">
     </div>
   </div>
 </section>
