--- a/src/app/shared/components/projects/projects.component.html
+++ b/src/app/shared/components/projects/projects.component.html
@@ -5,27 +5,27 @@
            grid-rows-auto md:grid-rows-6"
   >
     <img
-      ngSrc="assets/images/main.jpg"
+      ngSrc="assets/images/campTraveller.png"
       class="w-full h-64 sm:h-80 md:h-full row-span-6 object-cover cursor-pointer"
       alt="Portfolio Image 1"
-      width="1600"
-      height="2400"
+      width="1920"
+      height="4879"
     >
 
     <img
-      ngSrc="assets/images/main.jpg"
+      ngSrc="assets/images/mern-chat.png"
       class="w-full h-64 sm:h-80 md:h-full row-span-2 object-cover cursor-pointer"
       alt="Portfolio Image 2"
-      width="1600"
-      height="2400"
+      width="1919"
+      height="1080"
     >
 
     <img
-      ngSrc="assets/images/main.jpg"
-      class="w-full h-64 sm:h-80 md:h-full row-span-3 object-cover cursor-pointer"
-      alt="Portfolio Image 3"
-      width="1600"
-      height="2400"
+      ngSrc="assets/images/mcp-irail-image.png"
+      class="w-full h-64 sm:h-80 md:h-full row-span-3 object-cover object-top cursor-pointer"
+      alt="Portfolio Image 2"
+      width="732"
+      height="897"
     >
 
     <img
