--- a/src/app/shared/components/vision-mission/vision-mission.component.html
+++ b/src/app/shared/components/vision-mission/vision-mission.component.html
@@ -12,7 +12,8 @@
       'animate-slide-down-1':isVisionVisible
       }
       ">
-        <p class="max-md:text-sm">To capture the essence of life’s moments, turning them into timeless visual stories that inspire, connect,
+        <p class="max-md:text-sm">To capture the essence of life’s moments, turning them into timeless visual stories
+          that inspire, connect,
           and preserve memories for generations.</p>
       </div>
     </div>
@@ -20,7 +21,8 @@
       <div class="border-b flex flex-col md:justify-end pb-5 mb-2 gap-5" [ngClass]="{
       'animate-slide-down-2':isMissionVisible
       }">
-        <h1 class="text-4xl sm:text-7xl text-end md:text-10xl uppercase max-md:text-center" appAnimateOnView [animateOnce]="true"
+        <h1 class="text-4xl sm:text-7xl text-end md:text-10xl uppercase max-md:text-center" appAnimateOnView
+            [animateOnce]="true"
             (isVisibleChange)="onMissionVisibleChange($event)"
         >
           MISSION</h1>
